Add gcr and shy languages
Add Guianan Creole (gcr) and Shawiya (shy).

Bug: T238104
Bug: T238105
Change-Id: Iaf3b21dcf78e0c7fdd7de67f6998c6772b3b093f

--- a/templates/helpers/langlist.tmpl
+++ b/templates/helpers/langlist.tmpl
@@ -91,6 +91,7 @@
         'ga',
         'gag',
         'gan',
+        'gcr',
         'gd',
         'gl',
         'glk',
@@ -254,6 +255,7 @@
         'sg',
         'sh',
         'shn',
+        'shy',
         'si',
         'simple',
         'sk',
