add ppl (Nawat/Pipil) and kaj (Jju) languages to langlist
ppl:

https://iso639-3.sil.org/code/ppl
https://meta.wikimedia.org/wiki/Requests_for_new_languages/Wikipedia_Nawat

kaj:

https://iso639-3.sil.org/code/kaj
https://meta.wikimedia.org/wiki/Requests_for_new_languages/Wikipedia_Jju

Bug: T413283
Bug: T413273
Change-Id: I85845bf7fde950146b81af4a12de5d9038f4e621

--- a/templates/helpers/langlist.tmpl
+++ b/templates/helpers/langlist.tmpl
@@ -163,6 +163,7 @@
         'ka',
         'kaa',
         'kab',
+        'kaj',
         'kbd',
         'kbp',
         'kcg',
@@ -272,6 +273,7 @@
         'pms',
         'pnb',
         'pnt',
+        'ppl',
         'ps',
         'pt',
         'pwn',
